--- a/Docker_Learn/tomcat/Dockerfile
+++ b/Docker_Learn/tomcat/Dockerfile
@@ -9,7 +9,7 @@ LABEL author=Rishat_Mukhtarov
 
 RUN apt-get -y update
 RUN apt-get -y install apache2
-RUN systemctl enable apache2
+# RUN systemctl enable apache2
 RUN apt-get -y install nmap
 RUN apt-get -y install mc
 
@@ -22,7 +22,7 @@ COPY ./*.JPG /var/www/html
 # COPY ./index.html /usr/share/nginx/html
 # COPY ./*.JPG /usr/share/nginx/html
 
-# CMD ["/usr/sbin/apache2ctl", "-DFOREGROUND"]
+CMD ["/usr/sbin/apache2ctl", "-DFOREGROUND"]
 
 EXPOSE 80
 EXPOSE 22
