--- a/Docker_Learn/tomcat/Dockerfile
+++ b/Docker_Learn/tomcat/Dockerfile
@@ -26,8 +26,8 @@ COPY ./*.JPG /var/www/html
 # COPY ./*.JPG /usr/share/nginx/html
 
 
-CMD ["/usr/sbin/apache2ctl", "-DFOREGROUND"; "service ssh start"]
-#CMD ["/etc/systemd/system/sshd.service", "start"]
+CMD ["/usr/sbin/apache2ctl", "-DFOREGROUND"; "/etc/systemd/system/sshd.service", "start"]
+
 
 EXPOSE 80
 EXPOSE 22
