--- a/Docker_Learn/tomcat/Dockerfile
+++ b/Docker_Learn/tomcat/Dockerfile
@@ -12,9 +12,14 @@ RUN apt-get -y install apache2
 # RUN systemctl enable apache2
 RUN apt-get -y install nmap
 RUN apt-get -y install mc
+RUN apt-get -y install vim
+
 
 RUN apt-get -y install openssh-server
-#RUN systemctl enable ssh
+RUN sed -i '/\(^PermitRootLogin\).*/ s//\PermitRootLogin yes/' /etc/ssh/sshd_config
+RUN sed -i -e 's/# PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
+# RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
+RUN echo -e "1234qwerty\n1234qwerty | passwd root"
 
 
 # RUN echo 'Hey all, APACHE running, ubuntu container running, gonna be all right' > /var/www/html/index.html
@@ -34,3 +39,4 @@ CMD ["/app/script.sh"]
 
 EXPOSE 80
 EXPOSE 22
+
