--- a/Docker_Learn/tomcat/Dockerfile
+++ b/Docker_Learn/tomcat/Dockerfile
@@ -20,7 +20,8 @@ RUN sed -i '/\(^PermitRootLogin\).*/ s//\PermitRootLogin yes/' /etc/ssh/sshd_con
 RUN sed -i 's/^#\(.*PasswordAuthentication yes.*\)/\1/' /etc/ssh/sshd_config
 # RUN sed -i -e 's/# PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
 # RUN echo 'PasswordAuthentication yes' >> /etc/ssh/sshd_config
-RUN echo -e "1234qwerty\n1234qwerty" | passwd root
+# RUN echo -e "1234qwerty\n1234qwerty" | passwd root
+RUN echo 'user:passwd' | chpasswd
 
 
 # RUN echo 'Hey all, APACHE running, ubuntu container running, gonna be all right' > /var/www/html/index.html
