--- a/Docker_Learn/tomcat/Dockerfile
+++ b/Docker_Learn/tomcat/Dockerfile
@@ -43,7 +43,7 @@ CMD ["/app/script.sh"]
 #ENV CONTAINER_NAME=container_name / RUN export CONTAINER_NAME='container_name'
 #ENV MYSQL_ROOT_PASSWORD=sql_root_secret
 ENV CONTAINER_NAME=container_name
-RUN echo '<font color="green">This Web Server's running on container $CONTAINER_NAME !<br>' >> /var/www/html/index.html
+RUN echo '<font color="green">This Web Server is running on container $CONTAINER_NAME !<br>' >> /var/www/html/index.html
 
 EXPOSE 80
 EXPOSE 22
