--- a/Docker_Learn/python/dockerfile
+++ b/Docker_Learn/python/dockerfile
@@ -1,7 +1,11 @@
-FROM python:alpine
+#FROM python:alpine
+FROM python:3
 
-WORKDIR /app
+#WORKDIR /app
+WORKDIR /usr/src/app
 
-COPY . .
+COPY ./learn.py ./
+#COPY . .
 
-CMD [ "python", "main.py"]
+#CMD [ "python", "main.py"]
+CMD [ "python", "./learn.py"]
