Net Issues correction 3

--- a/Docker_Learn/tomcat/docker-compose.yml
+++ b/Docker_Learn/tomcat/docker-compose.yml
@@ -29,9 +29,8 @@ services:
     environment:
       - 'OWNER=Leysanchik'
     networks:
-      - bridge
-      - MACVLAN_0
-
+      - HomeBridge
+  
 networks:
   HomeBridge:
     external: true
