--- a/Docker_Learn/tomcat/docker-compose.yml
+++ b/Docker_Learn/tomcat/docker-compose.yml
@@ -32,6 +32,6 @@ services:
       - HomeBridge
   
 networks:
-  HomeBridge:
-    external: true
-    name: bridge
+  bridge:
+    external:
+      name: HomeBridge
