--- a/Docker_Learn/tomcat/docker-compose.yml
+++ b/Docker_Learn/tomcat/docker-compose.yml
@@ -32,6 +32,6 @@ services:
       - HomeBridge
   
 networks:
-  bridge:
-    external:
-      name: HomeBridge
+  HomeBridge:
+    external: true
+    name: HomeBridge
