--- a/Docker_Learn/example1/docker-compose.yml
+++ b/Docker_Learn/example1/docker-compose.yml
@@ -1,5 +1,5 @@
 # docker run --name app -p80:80 --net appnet php:apache
-# docker run --name app-postgres -e POSTGRES_PASSWORD=pass@ --net appnet postgress
+# docker run --name app-postgres -e POSTGRES_PASSWORD=pass@ --net appnet postgres
 # docker run --name app-redis --net appnet redis
 
 version: '3.6'
@@ -18,7 +18,7 @@ services:
       - localnet
 
   app-db:
-    image: postgress
+    image: postgres
     container_name: app-postgres
     restart: unless_stopped
     environment: 
